--- a/src/App.css
+++ b/src/App.css
@@ -2,24 +2,49 @@
   display: flex;
   flex: 1;
   height: 100vh;
+  overflow: hidden;
 }
 
 .form-container {
+  z-index: 99;
   flex: 1;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  padding: .5rem 1.5rem;
+  padding: 0.5rem 1.5rem;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   height: 100%;
-}
-
-.cv-container {
-  flex: 2;
 }
 
 .button {
   color: #fff;
   background-color: #0369a1;
-  padding: .75rem 2rem;
+  padding: 0.75rem 2rem;
+}
+
+input {
+  background-color: #f4f4f5;
+  border-radius: 0.375rem;
+  padding: 0.75rem 0.25rem;
+  border: 1px solid #d1d5db;
+}
+
+.cv-container {
+  flex: 2;
+  background-color: #f4f4f5;
+  height: 100vh;
+  padding: 2rem 2rem;
+  display: flex;
+  justify-content: center;
+  overflow-y: auto;
+}
+
+.cv {
+  background-color: #fff;
+  min-width: 210mm;
+  min-height: 297mm;
+  box-sizing: border-box;
+  box-shadow:
+    rgba(0, 0, 0, 0.02) 0px 1px 3px 0px,
+    rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
 }
