--- a/src/styles/PersonalInfoForm.css
+++ b/src/styles/PersonalInfoForm.css
@@ -1,4 +1,4 @@
-.personal-container {
+.form {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -6,7 +6,7 @@
   gap: 2rem;
 }
 
-.personal-form {
+.inputs {
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
@@ -15,7 +15,7 @@
 
 }
 
-.personal-form > div {
+.inputs > div {
   flex: 1;
   display: flex;
   flex-direction: column;
