--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,11 @@
   color: #fff;
   background-color: #0369a1;
   padding: 0.75rem 2rem;
+  border-radius: .375rem;
+}
+
+.button:hover {
+  cursor: pointer;
 }
 
 input, textarea {
