--- a/src/styles/form/PersonalInfoForm.css
+++ b/src/styles/form/PersonalInfoForm.css
@@ -3,7 +3,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 2rem;
+  gap: 1.875rem;
+  padding: 1.5rem;
 }
 
 .inputs {
