--- a/src/App.css
+++ b/src/App.css
@@ -13,8 +13,15 @@
   padding: 0.5rem 1.5rem;
   box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
   height: 100%;
+  overflow-y: scroll;
 }
 
+.forms {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: .5rem;
+}
 .button {
   color: #fff;
   background-color: #0369a1;
