--- a/src/styles/form/EducationForm.css
+++ b/src/styles/form/EducationForm.css
@@ -7,7 +7,29 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  gap: .25rem;
+  gap: 0.25rem;
+}
+
+.control-buttons {
+  display: flex;
+  flex-flow: row nowrap;
+  gap: 0.25rem;
+}
+
+.delete {
+  color: #ef4444;
+}
+
+.delete-icon {
+  background: none;
+  height: 100%;
+  width: 25px;
+}
+
+.delete:hover {
+  cursor: pointer;
+  color: #dc2626;
+  transition: color .3s ease-in-out;
 }
 
 .education-container {
